--- a/src/views/_includes/blocks/contactUs.pug
+++ b/src/views/_includes/blocks/contactUs.pug
@@ -1,6 +1,9 @@
 section.contactUs
   picture.contactUs__img
-    source(srcset="assets/img/contactUs/bg-md.jpg" media="(min-width: 321px)")
+    source(srcset="assets/img/contactUs/bg-lg.webp" media="(min-width: 1280px)" type="image/webp")
+    source(srcset="assets/img/contactUs/bg-lg.jpg" media="(min-width: 1280px)" type="image/jpg")
+    source(srcset="assets/img/contactUs/bg-md.webp" media="(min-width: 321px)" type="image/webp")
+    source(srcset="assets/img/contactUs/bg-md.jpg" media="(min-width: 321px)" type="image/jpg")
     img(src="assets/img/contactUs/bg.jpg")
 
   .container.contactUs__container
