--- a/src/views/_includes/blocks/models.pug
+++ b/src/views/_includes/blocks/models.pug
@@ -50,7 +50,29 @@ section.models
         span.card__info-price от 40 215 ₽/м²
       p.card__description Роскошная дворцовая классика
 
-    button.button.button--red.models__button Посмотреть все
+    .card
+      .card__img
+        img(src="assets/img/models/1.jpg")
+        .card__label.card__label--sale 
+      .card__info
+        span.card__info-name Bristel PRO
+        span.card__info-price от 40 215 ₽/м²
+      p.card__description Роскошная дворцовая классика
+
+    .card
+      .card__img
+        img(src="assets/img/models/1.jpg")
+        .card__label.card__label--sale 
+      .card__info
+        span.card__info-name Bristel PRO
+        span.card__info-price от 40 215 ₽/м²
+      p.card__description Роскошная дворцовая классика
+
+    button.button.button--primary.models__button
+      h3.title.models__button-title 127 моделей
+      span.models__button-subtitle со скидкой
+      span.models__button-text Посмотреть все
+      
 
     
 
