--- a/src/views/_includes/blocks/social.pug
+++ b/src/views/_includes/blocks/social.pug
@@ -49,6 +49,55 @@
         a(href="#").social__card
           img(src="assets/img/social/card1.png", alt="bg").social__card-img
 
+  .social__cards
+    a(href="#").social__card
+      picture.social__card-img
+        source(media="(min-width: 320px)", srcset="assets/img/social/card1.webp", type="image/webp")
+        source(media="(min-width: 320px)", srcset="assets/img/social/card1.png", type="image/png")
+        img(src="assets/img/social/card1.png", alt="bg")
+    a(href="#").social__card
+      picture.social__card-img
+        source(media="(min-width: 320px)", srcset="assets/img/social/card2.webp", type="image/webp")
+        source(media="(min-width: 320px)", srcset="assets/img/social/card2.png", type="image/png")
+        img(src="assets/img/social/card2.png", alt="bg")
+    a(href="#").social__card
+      picture.social__card-img
+        source(media="(min-width: 320px)", srcset="assets/img/social/card3.webp", type="image/webp")
+        source(media="(min-width: 320px)", srcset="assets/img/social/card3.png", type="image/png")
+        img(src="assets/img/social/card3.png", alt="bg")
+    a(href="#").social__card
+      picture.social__card-img
+        source(media="(min-width: 320px)", srcset="assets/img/social/card4.webp", type="image/webp")
+        source(media="(min-width: 320px)", srcset="assets/img/social/card4.png", type="image/png")
+        img(src="assets/img/social/card4.png", alt="bg")
+    a(href="#").social__card
+      picture.social__card-img
+        source(media="(min-width: 320px)", srcset="assets/img/social/card5.webp", type="image/webp")
+        source(media="(min-width: 320px)", srcset="assets/img/social/card5.png", type="image/png")
+        img(src="assets/img/social/card5.png", alt="bg")
+    a(href="#").social__card
+      picture.social__card-img
+        source(media="(min-width: 320px)", srcset="assets/img/social/card6.webp", type="image/webp")
+        source(media="(min-width: 320px)", srcset="assets/img/social/card6.png", type="image/png")
+        img(src="assets/img/social/card6.png", alt="bg")
+    a(href="#").social__card
+      picture.social__card-img
+        source(media="(min-width: 320px)", srcset="assets/img/social/card7.webp", type="image/webp")
+        source(media="(min-width: 320px)", srcset="assets/img/social/card7.png", type="image/png")
+        img(src="assets/img/social/card7.png", alt="bg")
+    a(href="#").social__card
+      picture.social__card-img
+        source(media="(min-width: 320px)", srcset="assets/img/social/card8.webp", type="image/webp")
+        source(media="(min-width: 320px)", srcset="assets/img/social/card8.png", type="image/png")
+        img(src="assets/img/social/card8.png", alt="bg")
+    a(href="#").social__card
+      picture.social__card-img
+        source(media="(min-width: 320px)", srcset="assets/img/social/card9.webp", type="image/webp")
+        source(media="(min-width: 320px)", srcset="assets/img/social/card9.png", type="image/png")
+        img(src="assets/img/social/card9.png", alt="bg")
+    
+
+
 
           
       
