--- a/src/views/_includes/blocks/stages.pug
+++ b/src/views/_includes/blocks/stages.pug
@@ -14,20 +14,20 @@ section.stages
         .swiper-slide.stages__swiper-slide
           .stages__card 
             img.stages__card-img(src="assets/img/stages/1.jpg", alt="1") 
-            h3.stages__card-title Создание проекта 
-            p.stages__card-description Онлайн-заявка или&nbsp;визит&nbsp;в&nbsp;салон
+            h3.stages__card-title ЗАмер помещения 
+            p.stages__card-description  Дистанционные замер или выезд замерщика
             img.stages__card-number(src="assets/img/stages/2.svg", alt="2")
         .swiper-slide.stages__swiper-slide
           .stages__card 
             img.stages__card-img(src="assets/img/stages/1.jpg", alt="1") 
-            h3.stages__card-title Создание проекта 
-            p.stages__card-description Онлайн-заявка или&nbsp;визит&nbsp;в&nbsp;салон
+            h3.stages__card-title Заключение договора
+            p.stages__card-description Онлайн-оплата или визит в салон 
             img.stages__card-number(src="assets/img/stages/3.svg", alt="3")
         .swiper-slide.stages__swiper-slide
           .stages__card 
             img.stages__card-img(src="assets/img/stages/1.jpg", alt="1") 
-            h3.stages__card-title Создание проекта 
-            p.stages__card-description Онлайн-заявка или&nbsp;визит&nbsp;в&nbsp;салон
+            h3.stages__card-title Доставка мебели
+            p.stages__card-description Сборка и установка происходит безопасно
             img.stages__card-number(src="assets/img/stages/4.svg", alt="4")
 
 
