--- a/src/scss/components/_articles.scss
+++ b/src/scss/components/_articles.scss
@@ -186,12 +186,17 @@
 
 
         &-img {
-            position: absolute;
 
-            height: 100%;
-            top: 0;
-            left: 0;
+            // position: absolute;
+            img {
+                max-width: 100%;
+                height: 100%;
+            }
 
         }
+    }
+
+    &__button {
+        display: none;
     }
 }
