--- a/src/scss/components/_bonuses.scss
+++ b/src/scss/components/_bonuses.scss
@@ -10,6 +10,11 @@
         width: 270px !important;
     }
 
+    &__title {
+        width: 268px;
+        margin-bottom: 45px;
+    }
+
     &__swiper {
         &-button {
 
@@ -29,6 +34,7 @@
         height: 387px;
         padding-top: 65px;
         position: relative;
+        overflow: hidden;
 
         &::after {
             content: '';
@@ -38,6 +44,10 @@
             width: 100%;
             height: 100%;
             background: rgba(28, 28, 28, 0.4);
+        }
+
+        &-label {
+            display: none;
         }
 
         &-title {
@@ -92,6 +102,11 @@
                 &::before {
                     background-color: #141414;
                 }
+            }
+
+            &::after {
+                background-color: rgba(255, 255, 255, 0.7);
+                filter: blur(100px);
             }
         }
     }
