--- a/src/scss/components/_feedback.scss
+++ b/src/scss/components/_feedback.scss
@@ -36,7 +36,7 @@
 
     &__card {
         width: 270px;
-        height: 583px;
+        min-height: 583px;
         border: 1px solid #CFCFCF;
         display: flex;
         flex-direction: column;
@@ -44,14 +44,19 @@
         padding-top: 21px;
         padding-left: 20px;
         padding-right: 19px;
+        padding-bottom: 33px;
+        // flex-direction: row;
 
-
+        &-text {
+            margin-bottom: 24px;
+        }
 
         &-img {
             width: 231px;
             height: 231px;
             position: relative;
             margin-bottom: 20px;
+            margin-right: 29px;
 
             img {
                 max-width: 100%;
@@ -85,6 +90,8 @@
             letter-spacing: 0.035em;
             color: #171717;
             opacity: 0.5;
+            display: inline-block;
+            margin-right: 23px;
         }
 
         &-button {
@@ -150,6 +157,7 @@
         width: 262px;
         margin-bottom: 18px;
         margin-top: 100px;
+        letter-spacing: normal;
     }
 
     &__card {
@@ -173,6 +181,7 @@
             justify-content: center;
             align-items: center;
             margin-right: 20px;
+            letter-spacing: normal;
 
             &::after {
                 content: '';
@@ -185,7 +194,7 @@
         }
 
         &-logo {
-            width: 121px;
+            // width: 121px;
             // height: 55px;
             display: flex;
             align-items: center;
