--- a/src/scss/components/_models.scss
+++ b/src/scss/components/_models.scss
@@ -18,6 +18,7 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
+        flex-direction: column;
 
     }
 
@@ -51,8 +52,21 @@
             margin-left: 12px;
             display: inline-block;
         }
+
+        &-title {
+            display: none;
+        }
+
+        &-subtitle {
+            display: none;
+        }
     }
 
+    .card {
+        &:nth-last-of-type(n+4) {
+            display: none;
+        }
+    }
 
 }
 
