--- a/src/views/_includes/blocks/bonuses.pug
+++ b/src/views/_includes/blocks/bonuses.pug
@@ -1,22 +1,32 @@
 section.bonuses
   .container.bonuses__container
-    .title.bonuses__title
+    .title.bonuses__title Спецпредложения и бонусы
     
     .swiper-container.bonuses__swiper-container
       .swiper-wrapper.bonuses__swiper-wrapper
         .swiper-slide.bonuses__swiper-slide
           .bonuses__card.bonuses__card
-            img(src="assets/img/bonuses/ascona.jpg", alt="bg").bonuses__card-img.bg-image
+            picture.bonuses__card-img.bg-image
+              source(media="(min-width: 768px)", srcset="assets/img/bonuses/ascona-md.webp", type="image/webp")
+              source(media="(min-width: 768px)", srcset="assets/img/bonuses/ascona-md.jpg", type="image/jpg")
+              source(media="(min-width: 320px)", srcset="assets/img/bonuses/ascona.webp", type="image/webp")
+              source(media="(min-width: 320px)", srcset="assets/img/bonuses/ascona.jpg", type="image/jpg")
+              img(src="assets/img/bonuses/ascona.jpg", alt="bg").lazyload
             h3.bonuses__card-title Купите кухню 
               span.bonuses__card-subtitle Ascona
             p.bonuses__card-text Столешница в подарок
         
         .swiper-slide.bonuses__swiper-slide
-          .bonuses__card.bonuses__card
-            img(src="assets/img/bonuses/ascona.jpg", alt="bg").bonuses__card-img.bg-image
-            h3.bonuses__card-title Купите кухню 
-              span.bonuses__card-subtitle Ascona
-            p.bonuses__card-text Столешница в подарок
+          .bonuses__card.bonuses__card--light
+            picture.bonuses__card-img.bg-image
+              source(media="(min-width: 768px)", srcset="assets/img/bonuses/certificate-md.webp", type="image/webp")
+              source(media="(min-width: 768px)", srcset="assets/img/bonuses/certificate-md.jpg", type="image/jpg")
+              source(media="(min-width: 320px)", srcset="assets/img/bonuses/certificate.webp", type="image/webp")
+              source(media="(min-width: 320px)", srcset="assets/img/bonuses/certificate.jpg", type="image/jpg")
+              img(src="assets/img/bonuses/certificate.jpg", alt="bg").lazyload
+            h3.bonuses__card-title Получи сертификат на 100 000 ₽ 
+            p.bonuses__card-text До конца августа
+            img(src="assets/img/bonuses/certificate-label.png", alt="certificate-label").bonuses__card-label
 
 
       .swiper-button-prev.bonuses__swiper-button-prev
