--- a/src/views/_includes/blocks/footer.pug
+++ b/src/views/_includes/blocks/footer.pug
@@ -42,10 +42,12 @@ section.list
       a.list__card-item(href='#') Адреса салонов
       a.list__card-item(href='#') Офисы салонов
     .list__card
-      a.list__card-title.list__card-title2(href='#') Калькулятор кухни
-      a.list__card-title.list__card-title2(href='#') Бесплатный дизайн
-      a.list__card-title.list__card-title2(href='#') Акции
-      a.list__card-title.list__card-title2(href='#') Распродажа
+      .list__card-block
+        a.list__card-title.list__card-title2(href='#') Калькулятор кухни
+        a.list__card-title.list__card-title2(href='#') Бесплатный дизайн
+      .list__card-block
+        a.list__card-title.list__card-title2(href='#') Акции
+        a.list__card-title.list__card-title2(href='#') Распродажа
 
     .contacts.list__card-contacts
       a.contacts__phone(href='tel:+74991354378') +7 (499) 135-43-78
